Data Ingestion Run Successful

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,19 @@
 paths:
   artifacts_dir: "artifacts"
-  
 
-  
+symbols:
+  currencies:
+    - BTC
+    - ETH
+    - BNB
+    - USDT
+    - ADA
+    - SOL
+    - AVAX
+    - MATIC
+    - LINK
+    - XRP
+    - DOGEVERSE
+    - SEAL
+    - WAI
+    - SPONGEV2
