--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,50 @@ static/
 
 
 
+routes/__pycache__/currencies_plots.cpython-310.pyc
+routes/__pycache__/seaborn_plots.cpython-310.pyc
+src/PortfolioOptimizer/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/__pycache__/logging.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/dataingestion_binance.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/dataingestion.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/dataprocessing.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/modelforecasting.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/modeltrainingXGBoost.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage01_DataIngestion_Binance.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage02_DataProcessing.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage03_ModelTrainingXGBoost.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage04_ModelForecasting.cpython-310.pyc
+src/PortfolioOptimizer/utils/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/utils/__pycache__/utils.cpython-310.pyc
+src/PortfolioOptimizer/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/__pycache__/logging.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/dataingestion_binance.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/dataprocessing.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/modelforecasting.cpython-310.pyc
+src/PortfolioOptimizer/components/__pycache__/modeltrainingXGBoost.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage01_DataIngestion_Binance.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage02_DataProcessing.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage03_ModelTrainingXGBoost.cpython-310.pyc
+src/PortfolioOptimizer/pipeline/__pycache__/stage04_ModelForecasting.cpython-310.pyc
+src/PortfolioOptimizer/utils/__pycache__/__init__.cpython-310.pyc
+src/PortfolioOptimizer/utils/__pycache__/utils.cpython-310.pyc
+logs/app.log
+artifacts/BNBUSDT_2Y.csv
+artifacts/BTCUSDT_2Y.csv
+artifacts/DOGEUSDT_2Y.csv
+artifacts/ETHUSDT_2Y.csv
+artifacts/LINKUSDT_2Y.csv
+artifacts/Forecasts/BNBUSDT_Forecast.csv
+artifacts/Forecasts/BTCUSDT_Forecast.csv
+artifacts/Forecasts/DOGEUSDT_Forecast.csv
+artifacts/Forecasts/ETHUSDT_Forecast.csv
+artifacts/Forecasts/LINKUSDT_Forecast.csv
+artifacts/Processed_DFs/BNBUSDT_Featured.csv
+artifacts/Processed_DFs/BTCUSDT_Featured.csv
+artifacts/Processed_DFs/DOGEUSDT_Featured.csv
+artifacts/Processed_DFs/ETHUSDT_Featured.csv
+artifacts/Processed_DFs/LINKUSDT_Featured.csv
